# iloop-marlin-configurator

./: AboutDialog.ui  Application.cpp  Application.h  BasicsPage.cpp  BasicsPage.h  BasicsPage.ui  CMakeLists.txt  Configuration.h  Endstops_Configurator.cpp  Endstops_Configurator.ui  HelperFunctions.h  HotendTempSensorsConfigurator.cpp  HotendTempSensorsConfigurator.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  TemperaturesPage.cpp  TemperaturesPage.h  TemperaturesPage.ui  main.cpp  resources.qrc
gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AbstractPage.cpp  AbstractPage.h  AdditionalFeaturesPage.cpp  AdditionalFeaturesPage.h  AdditionalFeaturesPage.ui  BasicsPage.cpp  BasicsPage.h  BasicsPage.ui  BedLevelingPage.cpp  BedLevelingPage.h  BedLevelingPage.ui  CMakeLists.txt  EncoderPage.cpp  EncoderPage.h  EncoderPage.ui  EndstopsPage.cpp  EndstopsPage.h  EndstopsPage.ui  Endstops_Configurator.cpp  Endstops_Configurator.h  Endstops_Configurator.ui  ExtraFeaturesPage.cpp  ExtraFeaturesPage.h  ExtraFeaturesPage.ui  ExtruderPage.cpp  ExtruderPage.h  ExtruderPage.ui  FilamentRunoutSensorPage.cpp  FilamentRunoutSensorPage.h  FilamentRunoutSensorPage.ui  FirmwarePage.cpp  FirmwarePage.h  FirmwarePage.ui  HardwarePage.cpp  HardwarePage.h  HardwarePage.ui  HomingAndBoundsPage.cpp  (+47 more)
gui/widgets/: CMakeLists.txt  DockWidget.cpp  DockWidget.h  Dropdown.cpp  Dropdown.h
resources/: additional_features_template.txt  bed_leveling_template.txt  configuration_template.txt  encoder_template.txt  endstops_template.txt  extra_features_template.txt  extruder_template.txt  filament_runout_sensor_template.txt  firmware_template.txt  hardware_template.txt  homing_and_bounds_template.txt  homing_options_template.txt  kinematics_template.txt  lcd_controller_template.txt  lcd_menu_items_template.txt  movement_template.txt  powersupply_template.txt  resources.qrc  sd_card_template.txt  speaker_template.txt  stepper_drivers_template.txt  thermalsettings_template.txt  user_interface_language_template.txt  z_probe_options_template.txt
