add_library(GUI_IMC_GUI)
add_library(GUI_IMC::GUI ALIAS GUI_IMC_GUI)

target_link_libraries(GUI_IMC_GUI
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Widgets
)

target_include_directories(GUI_IMC_GUI
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/..
)

target_sources(GUI_IMC_GUI
    PRIVATE
        MainWindow.h
        MainWindow.cpp
        MainWindow.ui
        AbstractPage.h
        AbstractPage.cpp
        FirmwarePage.h
        FirmwarePage.cpp
        FirmwarePage.ui
        HardwarePage.h
        HardwarePage.cpp
        HardwarePage.ui
        AboutDialog.h
        AboutDialog.cpp
        AboutDialog.ui
        PowerSupplyPage.h
        PowerSupplyPage.cpp
        PowerSupplyPage.ui
        WelcomePage.h
        WelcomePage.cpp
        WelcomePage.ui
        ExtruderPage.h
        ExtruderPage.cpp
        ExtruderPage.ui
        ThermalSettingsPage.h
        ThermalSettingsPage.cpp
        ThermalSettingsPage.ui
        KinematicsPage.h
        KinematicsPage.cpp
        KinematicsPage.ui
        EndstopsPage.h
        EndstopsPage.cpp
        EndstopsPage.ui
        MovementPage.h
        MovementPage.cpp
        MovementPage.ui
        ZProbeOptionsPage.h
        ZProbeOptionsPage.cpp
        ZProbeOptionsPage.ui
        StepperDriversPage.h
        StepperDriversPage.cpp
        StepperDriversPage.ui
        HomingAndBoundsPage.h
        HomingAndBoundsPage.cpp
        HomingAndBoundsPage.ui
        FilamentRunoutSensorPage.h
        FilamentRunoutSensorPage.cpp
        FilamentRunoutSensorPage.ui
        BedLevelingPage.h
        BedLevelingPage.cpp
        BedLevelingPage.ui
        HomingOptionsPage.h
        HomingOptionsPage.cpp
        HomingOptionsPage.ui
        AdditionalFeaturesPage.h
        AdditionalFeaturesPage.cpp
        AdditionalFeaturesPage.ui
        UserInterfaceLanguagePage.h
        UserInterfaceLanguagePage.cpp
        UserInterfaceLanguagePage.ui
        SDCardPage.h
        SDCardPage.cpp
        SDCardPage.ui
        LCDMenuItemsPage.h
        LCDMenuItemsPage.cpp
        LCDMenuItemsPage.ui
        EncoderPage.h
        EncoderPage.cpp
        EncoderPage.ui
        SpeakerPage.h
        SpeakerPage.cpp
        SpeakerPage.ui
        LCDControllerPage.h
        LCDControllerPage.cpp
        LCDControllerPage.ui
        ExtraFeaturesPage.h
        ExtraFeaturesPage.cpp
        ExtraFeaturesPage.ui
)

add_subdirectory(widgets)
